# shawn

./: .gitignore  Dockerfile  README.md  requirements.txt  setup.cfg  setup.py  tests.py  wsgi.py
shawn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: Scanner.py  __main__.py  consts.py
