[metadata]
name = Shawn
license = MIT
author = Shawn Lawyer
author_email = shawnlawyer@gmail.com
maintainer = Shawn Lawyer
maintainer_email = shawnlawyer@gmail.com
description = Scan Hosts And Watch Networks.

[options]
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    shawn = src.__main__:main

